

20-08-12 -- v0.9.12 release --

20-08-12 [MHC] Added tutorial: "25 - Image Based Lighting.frag" 
19-08-12 [MHC]	Added a welcome/warning notice.
				Added a crash during start detection mechanism.
				Updated shadows in DE-raytracer. Still not good.
				Added 'tetrahedron-alternative.frag'
				Update about page.

16-08-12 [MHC] Restored 'reflections' in DE-raytracer. Removed bounding sphere check.
			   Renamed 'Env-DE-Raytracer.frag' to 'IBL-Raytracer.frag'
				Include old DE-Raytracer versions.
				 "#include "DE-Raytracer-v0.9.10.frag"
				 "#include "DE-Raytracer-v0.9.1.frag"
				When opening a not-runnable fragment, categories persist.

30-07-12 [MHC]
Now does a 'reset all' when loading new system (otherwise too confusing).

22-07-12 [MHC]
Filenames in presets has a whitespace bug.
An 'uniform sampler2D' with non existent file will not create dialog. 
Using arrow keys now work when sliders have focus.

15-07-12 [MHC]
Added support for choosing '#include' through editor context menu.
More host defines:
 #define SubframeMax 0
 #define DontClearOnChange   <- when sliders/camera changes, the backbuffer is not cleared.
 #define IterationsBetweenRedraws 20  <- makes it possible to do several steps without updating screen.
Added Kali's Creations: KaliBox, LivingKIFS, TreeBroccoli, Xray_KIFS.
Added: Droste system, Reaction-Diffusion.
Added examples of working with double precision floats and emulated double precision floats: "Include/EmulatedDouble.frag", "Theory/Mandelbrot - Emulated Doubles.frag"


01-06-12 [MHC]
Added Thorn.frag [MHC]
Added Doyle-Spirals [KNIGHTY]
Shader fixes.
TextureManager working.
Removed unnecessary buffer rebuilds.
Added texture parameters preprocessor defines:
	#TexParameter texture GL_TEXTURE_MIN_FILTER GL_LINEAR
	#TexParameter texture GL_TEXTURE_MAG_FILTER GL_NEAREST
	#TexParameter texture GL_TEXTURE_WRAP_S GL_CLAMP
	#TexParameter texture GL_TEXTURE_WRAP_T GL_REPEAT


21-05-12 [MHC]
Added max subframe counter