@@ -56,9 +56,9 @@ bool inside(vec3 pos) {
 
 #preset Default
 FOV = 0.62536
-Eye = 0.633014,-0.13205,-1.83663
-Target = -3.07766,0.866233,6.14854
-Up = -0.87195,0.22693,-0.433562
+Eye = 0.137861,0.380908,-1.90454
+Target = -1.05894,-1.3684,6.69989
+Up = -0.970103,0.225702,-0.0892076
 EquiRectangular = false
 Gamma = 2.5
 ToneMapping = 3
@@ -66,11 +66,25 @@ Exposure = 1.34694
 Brightness = 1
 Contrast = 0.9901
 Saturation = 1
-GaussianWeight = 1
-AntiAliasScale = 0
+Near = 0.7368
+Far = 2.45904
+NormalScale = 0.58825
+AOScale = 1.0194
+Glow = 0.34167
+AOStrength = 0.86047
+Samples = 100
+Stratify = true
+DebugInside = false
+SampleNeighbors = true
+Specular = 0
+SpecularExp = 5.455
+SpotLight = 1,0.678431,0.494118,0.78431
+SpotLightDir = 1,0.78126
 CamLight = 1,1,1,0.38462
 CamLightMin = 0
 Fog = 0
+ShowDepth = false
+DebugNormals = false
 BaseColor = 1,1,1
 OrbitStrength = 0
 X = 1,1,1,1
@@ -81,25 +95,11 @@ BackgroundColor = 0.607843,0.866667,0.560784
 GradientBackground = 0.86955
 CycleColors = false
 Cycles = 1.1
-NormalScale = 0.00024
-AOScale = 0.00631
-Glow = 0.34167
-AOStrength = 0.86047
-Specular = 0
-SpecularExp = 5.455
-SpotLight = 1,0.678431,0.494118,0.78431
-SpotLightDir = 1,0.78126
 Iterations = 9
-ColorIterations = 9
 Power = 8
 Bailout = 5
-AlternateVersion = false
 RotVector = 1,1,1
 RotAngle = 0
 Julia = false
 JuliaC = 0,0,0
-ShowDepth = false
-Samples = 100
-Near = 0.7368
-Far = 2.45904
 #endpreset
