@@ -51,7 +51,7 @@ namespace Fragmentarium {
 			void setDisableRedraw(bool value) { disableRedraw = value; }
 			bool isRedrawDisabled() { return disableRedraw; }
 			CameraControl* getCameraControl() { return cameraControl; }
-			void setupTileRender(int tiles, int tileFrameMax, QString outputFile);
+			void setupTileRender(int tiles, float padding, int tileFrameMax, QString outputFile);
 			void resetTime() { time = QTime::currentTime(); }
 			void setViewFactor(int val);
 			void setPreviewFactor(int val);
@@ -114,6 +114,7 @@ namespace Fragmentarium {
 			QTime fpsTimer;
 			int fpsCounter;
 			int tiles;
+			float padding;
 			int tilesCount;
 			QVector<QImage> cachedTileImages;
 			int viewFactor;
